@@ -1,0 +1,7 @@
+
+# Moss bashrc - START
+alias vi='vim'
+alias grep='grep --color'
+alias dstat='dstat -cdlmnpsy'
+export PROMPT_COMMAND='RETRN_VAL=$?;logger -p authpriv.debug "$(who -u am i): $(history 1 | sed "s/^[ ]*[0-9]+[ ]*//" ) [$PWD][$RETRN_VAL]"'
+# Moss bashrc - END
